# flask-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  .skjoldignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  wsgi.py
flask_boilerplate/: __init__.py  app.py
flask_boilerplate/apis/: __init__.py  permission.py  role.py  role_permission.py  user.py
flask_boilerplate/constants/: __init__.py  base.py  enum.py  pemrission.py  permission.py  permissions.py  role.py  role_permission.py  user.py
flask_boilerplate/core/: __init__.py  config.py  logger.py  middlewares.py
flask_boilerplate/database/: __init__.py  base.py  initialize_database.py
flask_boilerplate/decorator/: authorization.py
flask_boilerplate/models/: __init__.py  permission.py  role.py  role_permission.py  user.py
flask_boilerplate/namespaces/: __init__.py  permission.py  role.py  role_permission.py  user.py
flask_boilerplate/repositories/: __init__.py  base.py  permission.py  role.py  role_permission.py  user.py
flask_boilerplate/responses/: __init__.py  base.py  permission.py  role.py  role_permission.py  user.py
flask_boilerplate/schemas/: __init__.py  base.py  permission.py  role.py  role_permission.py  user.py
flask_boilerplate/services/: __init__.py  base.py  permission.py  redis.py  role.py  role_permission.py  user.py
migrations/: env.py
scripts/: run.sh  update_redis.py
